--- a/Petropavlovsk_Kamčatkal.mw
+++ b/Petropavlovsk_Kamčatkal.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 179,586
  | Voz' = 2020-01-01
  | Pind = 362.14
- | Fail = Никольская сопка, Озерновская коса и Култучное озеро, Вид сверху.jpg
+ | Fail = Вид на Юго-Восточную часть Петропавловска-Камчатского.jpg
  | Pämez' = Konstantin Brizgin<br />(sulaku 2020—)
  | Telefonkod = +7-415. +7-4152
  | Avtokod = 41. 82
@@ -42,12 +42,13 @@ Ižandusen päsarakod oma energetine sarak, [[kala]]n da toižiden merenprodukto
 Камчатский краевой объединённый музей 90.jpg|Kamčatkan randan ühtenzoittud muzei (2021)
 Cобор Святой Живоначальной Троицы в городе Петропавловске-Камчатском.jpg|Pühän Stroican päjumalanpert', vn 2010 nägu
 Часовня в честь обороны Петропавловска 1854 года и братская могила.jpg|Muštnik-časoun' vn 1854 Petropavlovskan kaičendan muštoks i velleskaum, vn 2013 nägu
-Камчатский театр драмы и комедии.JPG|Kamčatkan draman i komedijan teatr (2012)
+Stocznia Pietropawłowsk Kamczacki.jpg|Kalaport vl 2013
+Cruise ship in avacha bay.jpg|Kruizlaiv Avačin merikaras vl 2009
 ГУМ Петропавловска-Камчатского2.jpg|Päine universaline lauk (2015)
+Камчатский театр драмы и комедии.JPG|Kamčatkan draman i komedijan teatr (2012)
 Спортивный комплекс "Звёздный" г. Петропавловск-Камчатский.JPG|«Zvözdnii»-sportkompleks (2012, ''Tähthakaz'')
 Petropavlovsk-Kamchatsky biathlon stadium.JPG|Biatlonkompleks stadionanke (2010)
 Petropavlovsk center port.jpg|Lidnan meriport istorižes keskuses vl 2005
-Cruise ship in avacha bay.jpg|Kruizlaiv Avačin merikaras vl 2009
 </gallery>
 
 == Homaičendad ==
