--- a/Jelizovo.mw
+++ b/Jelizovo.mw
@@ -32,6 +32,16 @@ Ižandusen päsarak om kalan ümbriradmine. Lidn om maižanduzrajonan da turizmm
 
 Avtobusad oma kundaližeks transportaks. Rahvahidenkeskeine Jelizovo-lendimport (''PKC / ПРЛ'') otab lidnan keskuzpalad. Sišpäi tehtas reisid Venämadme, mugažo čarterreisid Suvipäivnouzmaižen Azijan maihe, [[Tokio]]ho i [[Ankoridž]]ha.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Sculptural composition Bears.jpg|«Jelizovon kondjad»-monument, 2020 (om letud vl 2011)
+Kamchatskiy kray, Russia, 684007 - panoramio.jpg|RA-24402-punolendim Kamčatkan aviaedheotandas vl 2012
+Passenger terminal airport yelizovo1.jpg|Petropavlovskan Kamčatkal Jelizovo-lendimportan passažirterminal vl 2016
+</gallery>
+
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
 * [http://admelizovo.ru/ Lidnankundan tobmuden aluzkundoiden sait (''admelizovo.ru'').] {{ref-ru}}
 {{Commons|Category:Yelizovo}}
