--- a/Vilüčinsk.mw
+++ b/Vilüčinsk.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Ristitun seižutesed oliba neniš tahoiš edel jäaigad. Ende [[itel'menalaižed]] oliba enambuses Vilüčinskan ümbrištos, löuzihe 7 seižutest (2. voz'tuha e.m.e. — 1. voz'tuha meiden erad). ''Tarein-lidneihut'' ({{lang-ru|Тареин острожек}}) mainitase vn 1739 keväz'kul.
 
-Nügüdläižen eländpunktan aluz om pandud vl 1968 lidnan statusanke [[Tünen valdmeren laivišt]]on sodameribazaks. ''Ribačii''- (vozil 1931—1954 ''Uz' Tarj''), ''Primorskii''- da ''Sel'devai''-žilod ühtištuihe ''Petropavlovsk-Kamčatskii-50''-lidnha da tegisoiš sen lidnanlaptoikš. Vhesai 1994 nimitihe mugažo ''Primorskii''. Lidn om nimitadud lähižen [[Vilüčinskii (vulkan)|Vilüčinskii-vulkanan]] mödhe vspäi 1994.
+Nügüdläižen eländpunktan aluz om pandud vl 1968 lidnan statusanke [[Tünen valdmeren laivišt]]on sodameribazaks. ''Ribačii''- (vozil 1931−1954 ''Uz' Tarj''), ''Primorskii''- da ''Sel'devai''-žilod ühtištuihe ''Petropavlovsk-Kamčatskii-50''-lidnha da tegisoiš sen lidnanlaptoikš. Vhesai 1994 nimitihe mugažo ''Primorskii''. Lidn om nimitadud lähižen [[Vilüčinskii (vulkan)|Vilüčinskii-vulkanan]] mödhe vspäi 1994.
 
 == Geografijan andmused ==
 Lidn sijadase [[Avačin laht]]en Krašeninnikovan karan randoil, 10 m ü.m.t. keskmäižel korktusel. Matkad [[Petropavlovsk Kamčatkal|Petropavlovskhasai Kamčatkal]] om 25 km pohjoižpäivnouzmha.
@@ -27,12 +27,25 @@ Lidn sijadase [[Avačin laht]]en Krašeninnikovan karan randoil, 10 m ü.m.t. ke
 Vilüčinsk om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind — 341,22 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 25 401 ristitud. Vspäi 1996 kaikiš suremb ristitišt oli sil-žo vodel — 37 400 eläjad. 1990-nzil vozil saudihe [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] kaks' pühäpertid.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 25 401 ristitud. Vspäi 1996 kaikiš suremb ristitišt oli 37 400 eläjad sil-žo vodel.
+
+Saudihe [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] kaks' pühäpertid 1990-nzil vozil.
 
 == Ižanduz da transport ==
 Kamčatkan meritegim om kohendamha vedenalaižid laivoid — «Pohjoižpäivnouzmaine kohenduzkeskuz». Saudihe kalanümbriradajad tegint 1930-nzil vozil. Kamčatkan tedostancii om olmas vspäi 1957. Kamčatkan industrialine tehnikum om professionaližen opendusen aluzkundaks.
 
 Avtobusad i maršruttaksid oma kundaližeks transportaks lidnas da sen ümbrištos.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Вилючинск центральная площадь.JPG|Lidnan administracijan sauvuz keskuztorgul (2010)
+Вилючинск ночной парк.JPG|Puišt öližel aigal, vn 2015 nägu
+CoffeMachine.jpg|Kofekiosk vl 2016
+Frost Olympos in Avacha Bay Petropavlovsk-Kamchatskiy 27 August 2010.jpg|Sodalaivad lidnad vaste Vilüčinskii-vulkanke tagamal vl 2010
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.viluchinsk-city.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''viluchinsk-city.ru'').] {{ref-ru}}
