*Empty MediaWiki Message*

--- a/Jevlanov_Vladimir.mw
+++ b/Jevlanov_Vladimir.mw
@@ -2,7 +2,7 @@
 | изображение = Vladimir Evlanov (2013).jpg
 | описание изображения = Vladimir Jevlanov vn 2013 keväz'kus
 }}
-'''Vladimir Lazarevič Jevlanov''' ({{lang-ru|Владимир Лазаревич Евланов}}; sünd. [[3. eloku]] [[1948. voz'|1948]], [[Samar|Kuibišev-lidn]], [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|NSTÜ]]) om edeline [[Krasnodar]]an pämez' (vs 2005 sügüz'kun 18. päiväspäi — 27. sügüz'ku 2016). Vn 2016 sügüz'kuspäi radoi 7. kucundan [[Valdkundaline Dum|Valdkundaližen Duman]] deputataks, mülüi «[[Ühthine Venäma]]»-partijan frakcijha, oli komitetan ekonomižes politikas, tegimištos, innovacižes šingoteses i edheotaikundas.
+'''Vladimir Lazarevič Jevlanov''' ({{lang-ru|Владимир Лазаревич Евланов}}; sünd. [[3. eloku]] [[1948. voz'|1948]], [[Samar|Kuibišev-lidn]], [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|NSTÜ]]) om edeline [[Krasnodar]]an pämez' (vs 2005 sügüz'kun 18. päiväspäi — 27. sügüz'ku 2016). Vn 2016 sügüz'kuspäi radoi 7. kucundan [[Valdkundaline Dum|Valdkundaližen Duman]] deputataks, mülüi «[[Ühthine Venäma]]»-partijan frakcijha, oli komitetan ühtnijan ekonomižes politikas, tegimištos, innovacižes šingoteses i edheotaikundas.
 
 Vll 1972−1984 mez' oti kompartijan radnikusid [[Korsakov]]-lidnan ispolkomas, lopi Habarovskan üläpartškolad vl 1979. Vl 1984 mez' kanzanke sirdi Krasnodarha i oli ranu sen eländkodikommunaližen ižandusen pämehiden radnikusil vhesai 1994. Vl 1991 Jevlanov sai kahtent üläopendust Kubanin valdkundaližen universitetan ekonomikan fakul'tetas. Vll 1994−2000 mez' radoi Krasnodar-lidnan administracijas, oli sen varapämehen vspäi 1996.
 
