--- a/Susuman.mw
+++ b/Susuman.mw
@@ -14,7 +14,7 @@
  | Avtokod = 49
  | Aigvö = [[UTC]]+11 ([[MSK]]+8)
 }}
-'''Susuman''' ({{lang-ru|Сусуман}}) om [[Venäma]]n lidn [[Magadanan agj]]an lodehes. Se om Susumanan lidnümbrikon administrativine keskuz, edel 2015 vot nimitihe lidnümbrikod Susumanan rajonaks.
+'''Susuman''' ({{lang-ru|Сусуман}}) om [[Venäma]]n lidn [[Magadanan agj]]an lodehes. Se om Susumanan lidnümbrikon administrativine keskuz, edel 2015. vot nimitihe lidnümbrikod Susumanan rajonaks.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1938 žiloks samha [[kuld]]ad da [[kivihil'|kivihil't]]. Kävutihe türmatud mehiden töid. Vl 1964 žilo sai lidnan statusad. Maižandusen da sömtegimišton edheotandad radoihe edel ristitišton enambusen sirdandad toižihe sijihe.
@@ -24,14 +24,25 @@ Lidn sijadase ühtennimižen jogen da Berelöh-jogen randoil ([[Kolim]]an bassei
 
 Klimat om [[subarktine vö|subarktine]], terav kontinentaline kuiv. Paneb sadegid 195 mm vodes.
 
-5 lidnanvuittušt žilod da 7 muite žilod mülüdas lidnümbrikho Susumanan ližaks. Lidnümbrikon pind — 46 800 km². Eländpunktoiden pol' jäi kaikenaigaižeta ristitištota.
+Kaik viž lidnanvuittušt žilod da seičeme muite žilod mülüdas lidnümbrikho Susumanan ližaks. Lidnümbrikon pind — 46 800 km². Eländpunktoiden pol' jäi kaikenaigaižeta ristitištota.
 
 == Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 5 855 ristitud, lidnümbrikon — 9 015 ristitud. Kaikiš suremb lidnan ristitišt oli vl 1991 — 18 tuhad eläjid, rajonan vozil 1979 i 1989, enamba 47 tuhad eläjid (vl 1989 — 47 950 ristitud). Vl 2017 kaik 7667 ristitud elädas lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 5 855 ristitud, lidnümbrikon — 9 015 ristitud. Kaikiš suremb lidnan ristitišt oli 18 tuhad eläjid vl 1991, rajonan enamba 47 tuhad eläjid vozil 1979 i 1989 (47 950 ristitud vl 1989). Vl 2017 kaik 7667 ristitud elihe lidnümbrikos.
 
 Kuldan i kivihilen samine oma ižandusen päsarakoikš tähäsai. Üks' specialižen keskopendusen aluzkund om lidnas, se om kaivuztehnikum.
 
 Pen' civiline Susuman-lendimport sijadase lidnan suviröunal, tehtas reisid Magadanhasai.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Mikrorayon berelekh.jpg|Berelöh-mikrorajon vl 2012
+Laika ac Airplane House (6480345103).jpg|Installäcii [[Il-18]]-lendimen ezipalanke norišton aviaklubas (2011)
+Laika ac Susuman (6479500015).jpg|Lavut lapsiden täht (2011)
+Ru-Susuman-Dom-odezhdy.jpg|Sobiden pert' Koume bagatirid-kukhidenke tagamal, 1976. vai 1977. voz'
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://susumanskiy-rayon.ru/ Susumanan lidnümbrikon tobmuden aluzkundoiden oficialine sait (''susumanskiy-rayon.ru'').] {{ref-ru}}
