--- a/Magadan.mw
+++ b/Magadan.mw
@@ -8,12 +8,13 @@
  | Eläjiden lugu = 91,781
  | Voz' = 2019
  | Pind = 295
- | Fail = Magadan, Lenin-Street.jpg
+ | Fail = Magadan seen from mountain.jpg
  | Pämez' = Jurii Grišan<br />(kül'mku 2015—)
  | Telefonkod = +7-4132-xxx-xxx
  | Avtokod = 49
  | Aigvö = [[UTC]]+11 ([[MSK]]+8)
 }}
+[[Fail:MapOfMagadan.png|thumb|left|250px|Lidnan kart (2019)]]
 '''Magadan''' ({{lang-ru|Магадан}}) om lidn da lidnümbrik [[Venäma]]n pohjoižpäivnouzmas. Se om [[Magadanan agj]]an administrativine keskuz da kaikiš suremb lidn, meriport.
 
 == Istorii ==
@@ -32,7 +33,21 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 95 982 ristitud. K
 == Transport ==
 Maršruttaksid oma kundaližeks transportaks lidnas. Avtobusad ühtenzoittas lidnad agjan eländpunktoidenke, ei ole raudteid. Meriport radab vodes läbi, tal'vel [[jänmurendai|jänmurendajiden]] abul.
 
-Rahvahidenkeskeine soda- da civiline ''Magadan (Sokol)''-lendimport (''GDX / МДС'') sijadase 56 kilometras pohjoižhe lidnaspäi läz «Kolim»-avtoted da Sokol-žilod. Tehtas reisid Edahaižen Päivnouzmman lidnoihe, Sibirin suven järedoihe lidnoihe, [[Moskv]]ha i [[Piter]]ihe. Pen' civiline ''Magadan-13''-lendimport sijadase 13 kilometras läz «Kolim»-avtoted, sišpäi tehtas čarterreisid.
+Rahvahidenkeskeine soda- da civiline ''Magadan (Sokol)''-lendimport (''GDX / МДС'') [[Vladimir Visockii|V. Visockijan]] nimed sijadase 56 kilometras pohjoižhe lidnaspäi läz «Kolim»-avtoted da Sokol-žilod. Tehtas reisid Edahaižen Päivnouzmman lidnoihe, Sibirin suven järedoihe lidnoihe, [[Moskv]]ha i [[Piter]]ihe. Pen' civiline ''Magadan-13''-lendimport sijadase 13 kilometras läz «Kolim»-avtoted, sišpäi tehtas čarterreisid.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Северовостокзолото.jpg|«Severovostokzoloto»-kompanijan kontor (2020)
+Магаданский Троицкий собор. Фасад.jpg|Pühän Stroican kafedraline päjumalanpert', vn 2013 nägu
+Собор Святого Духа в Магадане.png|Pühän Hengen päjumalanpert', vn 2013 nägu
+Магадан Драмтеатр.jpg|Magadanan muzikdramteatr M. Gor'kijan nimed (2020)
+Магаданская научная библиотека им. А. С. Пушкина.jpg|Magadanan tedokirjišt A. Puškinan nimed (2017)
+Магадан кинотеатр «Горняк».jpg|«Gornäk»-kinoteatr (2020)
+Magadan, Palace of Sports.jpg|Lidnan sportpert'kulu (2018)
+Laika ac Magadan beach (6457763827).jpg|Magadanan kül'bendrand, 10. heinku 2011
+Magadan-port.jpg|Jügulaivan joudutand kivihilespäi Magadanan torguindmeriportas vl 2014
+Winter panorama.jpg|Magadan (Sokol)-lendimport vl 2019
+</gallery>
 
 == Homaičendad ==
 <references />
