--- a/Aldan_(lidn).mw
+++ b/Aldan_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 20,700
  | Voz' = 2017
  | Pind = 33
- | Fail = Aldan station.jpg
+ | Fail = Поездка в Северомуйск (151).jpg
  | Pämez' = Aleksandr Bugai<br />(kezaku 2004—)
  | Telefonkod = +7-41145-xx-xxx
  | Avtokod = 14
@@ -28,7 +28,21 @@ Lidn sijadase [[Aldan (jogi)|Aldan-jogen]] oigedpol'žes basseinas, Aldanan mäg
 Kaks' pen't žilod mülüdas lidnankundha Aldanan ližaks. Lidnankundan pind — 11 110 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 21 275 ristitud, rajonan ristitišton pol'. Kaikiš suremb lidnan ristitišt oli 27 090 eläjad vl 1989. Vl 2017 kaik 20 908 ristitud elihe lidnankundas. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Venäman uziden moknikoiden da hengenavaidajiden jumalanpert' om saudud vll 1995−2000.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 21 275 ristitud, rajonan ristitišton pol'. Kaikiš suremb lidnan ristitišt oli 27 090 eläjad vl 1989. Vl 2017 kaik 20 908 ristitud elihe lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Venäman uziden moknikoiden da hengenavaidajiden jumalanpert' om saudud vll 1995−2000.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+RU Aldan Lenina19.jpg|Lidnan tobmuden üks' sauvusišpäi (2018)
+Поездка в Северомуйск (146).jpg|Venäman uziden moknikoiden da hengenavaidajiden jumalanpert', vn 2018 nägu
+Поездка в Северомуйск (152).jpg|«Jakutija»-adivpert' vl 2018
+RU Aldan BegtinTrarabukinMon-2.jpg|Kul'turkeskuz (2018)
+Aldan station (1).jpg|Aldan-päraudtestancijan sauvuz vl 2009
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://aldan.sakha.gov.ru/ Lidnan tobmuden sait tazovaldkundan oficialižel portalal (''aldan.sakha.gov.ru'')] {{ref-ru}} {{ref-en}} {{ref-sah}} da sen [http://old.sakha.gov.ru/section/62/settlement/1967 vanh versii].
