--- a/Aldan_(lidn).mw
+++ b/Aldan_(lidn).mw
@@ -20,7 +20,7 @@
 == Enzne ==
 Eländpunktan aluz om pandud vl 1924 kuti ''Nezametnii-žilo'' samha [[kuld]]ad, nimitihe ojan mödhe. Žilo sai lidnan statusad vn 1932 20. päiväl sügüz'kud. Udesnimitihe nügüdläižikš vn 1939 semendkus.
 
-Lidn šingotase kuldan samižel tähäsai, mugažo mecanümbriradajad pened edheotandad ratas. «Jakutijan raudted»-kompanijan (Amuran-Jakutijan raudtemagistralin sauvond) ohjanduz da vedimdepo sijadasoiš Aldanas.
+Aldan šingotase kuldan samižel tähäsai, mugažo mecanümbriradajad pened edheotandad ratas. «Jakutijan raudted»-kompanijan (Amuran-Jakutijan raudtemagistralin sauvond) ohjanduz da vedimdepo sijadasoiš Aldanas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Aldan (jogi)|Aldan-jogen]] oigedpol'žes basseinas, Aldanan mägištol, 650 m ü.m.t. keskmäižel korktusel. Matkad Aldan-jogehesai om 50 km lodeheze, [[Jakutsk]]hasai om 450 km pohjoižpäivnouzmha orhal vai 540 km avtotedme. Lähembaine lidn om [[Tommot]] 65 km pohjoižpäivnouzmha orhal vai 78 km avtol, se om rajonan toine lidn. ''Aldan-raudtestancii'' om olmas «[[Skovorodino]] — Tommot»-jonol.
@@ -34,7 +34,7 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 21 2
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-RU Aldan Lenina19.jpg|Lidnan tobmuden üks' sauvusišpäi (2018)
+RU Aldan Lenina19.jpg|Lidnan da sen ulusan tobmuden üks' sauvusišpäi (2018)
 Поездка в Северомуйск (146).jpg|Venäman uziden moknikoiden da hengenavaidajiden jumalanpert', vn 2018 nägu
 Поездка в Северомуйск (152).jpg|«Jakutija»-adivpert' vl 2018
 RU Aldan BegtinTrarabukinMon-2.jpg|Kul'turkeskuz (2018)
