--- a/Lensk.mw
+++ b/Lensk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 23,660
  | Voz' = 2017
  | Pind = 46.19
- | Fail = 320 Ленск. Стела в честь первопроходцев.jpg
+ | Fail = Ленск2.jpg
  | Pämez' = Aleksandr Horunov<br />(reduku 2012—)
  | Telefonkod = +7-41137-xx-xxx
  | Avtokod = 14
@@ -29,7 +29,22 @@ Klimat om terav kontinentaline. Heinkun lämuz om +17,7 C°, vilukun — −29 C
 Lensk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 966 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 30 900 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Ph. Innokentijan Moskvalaižen jumalanpert' om saudud vl 2001.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 966 ristitud, rajonan koume videndest. Kaikiš suremb ristitišt oli 30 900 eläjad vl 1992.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Ph. Innokentijan Moskvalaižen jumalanpert' om saudud vl 2001.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+320 Ленск. Стела в честь первопроходцев.jpg|Randird i muštpacaz edelmatkajiden muštoks
+Lensk reportage 05.JPG|Ph. Innokentijan Moskvalaižen jumalanpert', vn 2014 nägu
+305 Ленск. Транснефть.jpg|«[[Transneft']]»-kompanijan kontor vl 2016
+307 Ленск. Краеведческий музей.jpg|Kodirandantedištandmuzei (2016)
+Lensk. reportage 21-06-2014 07.JPG|Lensk-lendimportan sauvuz vl 2014
+339 Ленский речной порт.jpg|Lenskan jogiport vl 2016
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://gorodlensk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''gorodlensk.ru'').] {{ref-ru}}
