--- a/Vilüisk.mw
+++ b/Vilüisk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 10,975
  | Voz' = 2017
  | Pind = 23
- | Fail = 
+ | Fail = Вилюйск. В этом доме в 1921 г. проходила 1 уездная комсомольская конференция - panoramio.jpg
  | Pämez' = Nürgustan Afanasjev<br />(sügüz'ku 2017—)
  | Telefonkod = +7-41132-xx-xxx
  | Avtokod = 14
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1634 jeniseilaižil [[kozakišt|kozakoil]] kuti ''Olensk'' keradamha valdkundmaksad da elänzoitmaha tahod. Vl 1783 se sai lidnan statusad, no vl 1805 lidn oli muretud. Udessündutihe sidä, i vl 1822 anttihe lidnan statusad tošti udenke Vilüisk-nimenke jogen mödhe.
 
-Lidn šingotase sauvondedheotandoil, betontegimel, [[raudbeton|raudbetontegesiden]] i [[arbolit]]an pästandal.
+Vilüisk šingotase sauvondedheotandoil, betontegimel, [[raudbeton|raudbetontegesiden]] i [[arbolit]]an pästandal.
 
 == Geografijan andmused ==
 Lidn sijadase [[Vilüi|Vilüi-jogen]] oiktal randal ({{lang-sah|Бүлүү}}, [[Len (jogi)|Lenan]] hura ližajogi), 110 m ü.m.t. keskmäižel korktusel. Matkad [[Jakutsk]]hasai om 450 km suvipäivnouzmha orhal vai 550 km avtotedme. Lähembaine lidn om [[Nürb]] 170 km päivlaskmha orhal vai 214 km avtol.
@@ -30,6 +30,16 @@ Sosnovk-žilo (304 rist. vl 2017) mülüb lidnankundha Vilüiskan ližaks. Lidna
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 234 ristitud, ulusan nell' ühesandest. Kaikiš suremb lidnan ristitišt om nügüd'. Vl 2017 kaik 11 279 ristitud elihe lidnankundas, ulusan nell' ühesandest.
 
 Vilüiskan tehnikum i Vilüiskan pedagogine kolledž oma professionaližen opendusen aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание администрации Вилюйского улуса - panoramio.jpg|Vilüiskan ulusan administracijan sauvuz (2010)
+Столовая в Вилюйске - panoramio.jpg|Sömsija vl 2010
+Музей в Вилюйске - panoramio.jpg|Vilüiskan kodirandantedištandmuzei (2009)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://vilyuisk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''vilyuisk.ru'').] {{ref-ru}} {{ref-sah}}
