--- a/Jakutsk.mw
+++ b/Jakutsk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 311,760
  | Voz' = 2018
  | Pind = 122
- | Fail = Дом Арчы.jpg
+ | Fail = Yakutsk panorama.jpg
  | Pämez' = Aisen Nikolajev<br />(2012—)
  | Telefonkod = +7-4112-xxx-xxx
  | Avtokod = 14
@@ -24,7 +24,7 @@ Lidn sijadase Tuimaad-alangištos, seižub [[Len (jogi)|Lenanjogen]] hural randa
 
 Klimat om terav kontinentaline kuiv. Tal'v om lujas vilu (tal'vkun-vilukun keskmäine lämuz −38 C°), ei olele sulasäd tal'vkus-uhokus. Keza om läm' i paksus räk. Voden keskmäine lämuz — −8,8 C°. Paneb sadegid 237 mm vodes, kaikiš vähemb tal'vkus-sulakus (7..10 mm kus).
 
-Jakutsk-lidnümbrik jagase kahesha administrativižhe ümbrikho. Kümne žilod mülüdas lidnümbrikho Jakutskan ližaks.
+Jakutsk-lidnümbrik jagase kahesaks administrativižeks ümbrikoks. Kümne žilod mülüdas lidnümbrikho Jakutskan ližaks.
 
 == Eläjad ==
 Vn 2010 kaiken Venäman ravahanlugemižen mödhe lidnan eläjiden lugu oli 269 601 ristitud, lidnümbrikon — 295 664 ristitud. Vl 2017 kaik om 324 651 eläjid lidnümbrikos, se om tazovaldkundan ristitišton koumandez.
@@ -35,6 +35,21 @@ Rahvahad (vl 2010): [[jakutalaižed]] — 52,3%, [[venälaižed]] — 41,9%, toi
 Avtobusad da taksid oma kundaližtransportaks. Jogitransport ühtenzoitab Lenan basseinan lidnoidenke.
 
 Om kaks' civilišt lendimportad. Rahvahidenkeskeine Jakutsk (Tuimaad)-lendimport (''YKS / ЯКТ'') sijadase lidnan pohjoižpoles 7 km keskusespäi. Sišpäi da sihe tehtas čarterreisid Azijan lebutahoihe, Sibiridme da Jakutijan südäimes. Magan-varalendimport (''GYG / МГН'') sijadase 12 km lodeheze Jakutskan röunaspäi ühtennimižes žilos. Sikš ku sumeg om paksus pälendimportas, varalendimport om olmas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Проспект Ленина возле остановки «Кинотеатр Центральный».jpg|Lidnümbrikon Duman i administracijan sauvuz (huralpäi, 2017)
+Преображенская церковь ночью - panoramio.jpg|Jakutsk-lidnan Sündun Toižetamižen kafedraline päjumalanpert', vn 2012 nägu
+Дом Арчы.jpg|Jakutan hengeližusen «Arči-pert'»-keskuz ({{lang-ja|Арчы Дьиэтэ}}), vn 2014 nägu
+Alrosa yakutsk.jpg|[[ALROSA]]-kompanijan sauvuz vl 2018
+Бизнес-центр.Якутск.jpg|Bizneskeskuz vl 2014
+КФЕН СВФУ август 2013.jpg|Pohjoižpäivnouzmaine federaline universitet, londuseližiden tedoiden fakul'tetad (2013)
+ЯГСХА.jpg|Arktine valdkundaline agrotehnologine universitet (2008)
+Арктический государственный институт искусств и культуры.JPG|Arktine valdkundaline kul'turan i čomamahtoiden institut (2015)
+Институт горного дела севера им. Черского СО РАН.JPG|Pohjoižen kaivuztön institut Čerskijan nimed (2013, Venäman Tedoakademijan Sibirin palakund)
+Yakutsk Sakha theatre square.jpg|Saha-teatr Ordžonikidzen torgul (2017)
+Аэропорт Якутск.jpg|Jakutsk-lendimportan terminal vl 2014
+</gallery>
 
 == Homaičendad ==
 <references />
