*Empty MediaWiki Message*

--- a/Jakutsk.mw
+++ b/Jakutsk.mw
@@ -40,7 +40,7 @@ Om kaks' civilišt lendimportad. Rahvahidenkeskeine Jakutsk (Tuimaad)-lendimport
 <gallery mode="packed" heights="125px">
 Проспект Ленина возле остановки «Кинотеатр Центральный».jpg|Lidnümbrikon Duman i administracijan sauvuz (huralpäi, 2017)
 Преображенская церковь ночью - panoramio.jpg|Jakutsk-lidnan Sündun Toižetamižen kafedraline päjumalanpert', vn 2012 nägu
-Дом Арчы.jpg|Jakutan hengeližusen «Arči-pert'»-keskuz ({{lang-ja|Арчы Дьиэтэ}}), vn 2014 nägu
+Дом Арчы.jpg|Jakutan hengeližusen «Arči-pert'»-keskuz ({{lang-sah|Арчы Дьиэтэ}}), vn 2014 nägu
 Alrosa yakutsk.jpg|[[ALROSA]]-kompanijan sauvuz vl 2018
 Бизнес-центр.Якутск.jpg|Bizneskeskuz vl 2014
 КФЕН СВФУ август 2013.jpg|Pohjoižpäivnouzmaine federaline universitet, londuseližiden tedoiden fakul'tetad (2013)
