--- a/Verhojansk.mw
+++ b/Verhojansk.mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
- | Nimi = Verhojansk<br />Верхоянск <small>(ven.)</small><br />Верхоянскай <small>(jakut.)</small>
+ | Nimi = Verhojansk<br />Верхоянск <small>(ven.)</small><br />Үөһээ Дьааҥы / Верхоянскай <small>(jakut.)</small>
  | Lidnanznam = Coat of Arms of Verkhoyansk (Yakutia) soviet.png
- | Flag = 
+ | Flag = Flag of Verkhoyansk.png
  | Lidnanznam text = Verhojanskan lidnanznam
- | Flag text = 
+ | Flag text = Verhojanskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 1,131
  | Voz' = 2017
@@ -14,7 +14,8 @@
  | Avtokod = 14
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
 }}
-'''Verhojansk''' ({{lang-ru|Верхоянск}}, {{lang-sah|Верхоянскай}}) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an pohjoižes. Se om [[Verhojanskan rajon]]an üks'jäine lidn. Mail'man kaikiš vilumb eländpunkt lidnan statusanke (−67,8 C° vn 1892 uhokus).
+[[Fail:MapOfVerkhoyansk.png|thumb|left|250px|Lidnan kart (2018)]]
+'''Verhojansk''' ({{lang-ru|Верхоянск}}, {{lang-sah|Үөһээ Дьааҥы / Верхоянскай}}) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an pohjoižes. Se om [[Verhojanskan rajon]]an üks'jäine lidn. Mail'man kaikiš vilumb eländpunkt lidnan statusanke (−67,8 C° vn 1892 uhokus).
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1638 Posnik Ivanoval kuti [[kozakišt|kozakoiden]] tal'veline eländsija. Se sai lidnan statusad vl 1817. Šingotihe kükstud mehiden eländsijaks. Nügüd'aigan mecpunktan ižanduzkeskuz, jogivaldmad da lendimport sijadasoiš lidnas, se šingotase karvpramozlal i maižandusel.
@@ -26,6 +27,13 @@ Verhojansk om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 1 311 ristitud, rajonan kümnendez. Kaikiš suremb ristitišt oli 2 tuhad eläjid vll 1998−2000.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Talkessel von Werchojansk.JPG|Jogen bassein Verhojanskanno
+Verhojansk ilmastodiagrammi.png|Lidnan klimat kuidme (vn 2005 diagramm)
+Flughafen Werchojansk II.JPG|Sauptud lendimportan sauvuz vl 2009
+</gallery>
 
 == Irdkosketused ==
 * [http://verhoyansk.sakha.gov.ru/ Lidnan tobmuden sait tazovaldkundan oficialižel portalal (''verhoyansk.sakha.gov.ru'')] {{ref-ru}} {{ref-en}} {{ref-sah}} da sen [http://old.sakha.gov.ru/verhoyansk vanh versii].
