--- a/Udačnii.mw
+++ b/Udačnii.mw
@@ -32,6 +32,15 @@ Ižandusen päsarak om [[diamant]]oiden samine tähäsai ([[ALROSA]]-kompanii).
 
 Civiline Polärnii-lendimport (''PYJ / ПЛЯ'') sijadase 9 km lidnaspäi päivlaskmha. Sišpäi tehtas reisid [[Moskv]]ha da [[Irkutsk]]ha, mugažo tazovaldkundadme. Se om varalendimport rahvahidenkeskeižiden reisiden täht.
 
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Udachnaya pipe.JPG|«Udačnai»-diamantkaivuden nägu punolendimespäi vl 2004
+Udachnuy.gif|Eländfartaliden toine nägu
+</gallery>
+
+== Homaičendad ==
+<references />
+
 == Irdkosketused ==
 * [http://мо-город-удачный.рф/ Lidnan tobmuden aluzkundoiden oficialine sait (''мо-город-удачный.рф'').] {{ref-ru}}
 * [http://udachnyi.sakha.gov.ru/ Lidnan tobmuden sait tazovaldkundan oficialižel portalal (''udachnyi.sakha.gov.ru'')] {{ref-ru}} {{ref-en}} {{ref-sah}} da sen [http://old.sakha.gov.ru/udachnyi vanh versii].
