--- a/Makri_Maurisio.mw
+++ b/Makri_Maurisio.mw
@@ -2,10 +2,10 @@
 | изображение = Presidente Macri en el Sillon de Rivadavia (cropped).jpg
 | описание изображения = Maurisio Makri inauguracijan prezidentaks aigan vl 2015
 }}
-[[Fail:Mauricio Macri fue recibido por el Papa Francisco (9837084823).jpg|thumb|left|250px|Maurisio Makri da [[Francisk (Rimalaine papa)|Francisk-papa]].]]
-'''Maurisio Makri''' ({{lang-es|Mauricio Macri}} [mau'ɾisjo 'makɾi]; sünd. [[8. uhoku]] [[1959]], [[Tandil']], Argentin) om [[Argentin]]an 56. dai nügüdläine pämez' (prezident) vs 2015 tal'vkun 10. päiväspäi.
+[[Fail:Mauricio Macri fue recibido por el Papa Francisco (9837084823).jpg|thumb|left|250px|Maurisio Makri i [[Francisk (Rimalaine papa)|Francisk-papa]]]]
+'''Maurisio Makri''' ({{lang-es|Mauricio Macri}} [mau'ɾisjo 'makɾi]; sünd. [[8. uhoku]] [[1959]], [[Tandil']], Argentin) om [[Argentin]]an edeline pämez', 56nz' prezident vs 2015 tal'vkun 10. päiväspäi vn 2019 tal'vkun 10. päivhäsai.
 
-Hän oli mugažo ičeze valdkundan [[Buenos Aires]]-pälidnan pämehen (24.06.2007—10.12.2015), edel sidä — Argentinan parlamentan alakodin ezitajan.
+Mez' oli ičeze valdkundan [[Buenos Aires]]-pälidnan pämehen (24.06.2007—10.12.2015) mugažo, edel sidä — Argentinan parlamentan alakodin ezitajan. Buenos Airesan «[[Boku H]]»-futbolkluban prezident vll 1995−2007.
 
 == Homaičendad ==
 <references/>
