--- a/Ville-la-Komb.mw
+++ b/Ville-la-Komb.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Ville la Komb<br />Villers-la-Combe
+ | Nimi = Ville-la-Komb<br />Villers-la-Combe
  | Lidnanznam = 
  | Flag = 
  | Lidnanznam text = 
@@ -9,15 +9,18 @@
  | Voz' = 2016
  | Pind = 5.88
  | Fail = Eglise de Villers-la-Combe.JPG
- | Pämez' = Raimon Bassin'jo<br/>(keväz'ku 2001—)
+ | Pämez' = Raimon Bassin'jo<br/>(keväz'ku 2001—, om pandud 2020−2026 strokus,<br/>''Raymond Bassignot'')
  | Telefonkod = +33-(0)3
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Ville la Komb''' ({{lang-fr|Villers-la-Combe}}) om [[Francii|Francijan]] kommun [[Burgundii — Franš-Konte]]-regionan päivnouzmas.
+'''Ville-la-Komb''' ({{lang-fr|Villers-la-Combe}}) om [[Francii|Francijan]] kund (kommun) [[Burgundii — Franš-Konte]]-regionan päivnouzmas, sen [[Du (departament)|Du]]-departamentas.
 
-Kommun sijadase [[Al'pad|Al'piden]] ezimägištol, 617..823 m ü.m.t. korktusil.
+Kund sijadase [[Al'pad|Al'piden]] ezimägištol, 617..823 m ü.m.t. korktusil. Lähembaine sur' lidn om [[Bezanson]] 33 km päivlaskmha.
 
 Vn 2011 Francijan rahvahanlugemižen mödhe eläjiden lugu oli 48 ristitud. Kaikiš suremb kundan ristitišt oli 238 eläjad vll 1836 i 1846.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Villers-la-Combe}}
 
