--- a/Evenan_kel'.mw
+++ b/Evenan_kel'.mw
@@ -1,8 +1,10 @@
-'''Evenan kel'''' (ende '''lamutan kel' ''', ičeze nimituz: ''эвэды торэн'') om [[evenalaižed|evenalaižiden]] kel', üks' [[tungusiž-man'čžurižed keled|tungusiž-man'čžurižiš kelišpäi]].
+'''Evenan kel'''' (ende '''lamutan kel' ''', ičeze nimituz: ''эвэды төрэн'') om [[evenalaižed|evenalaižiden]] kel', üks' [[tungusiž-man'čžurižed keled|tungusiž-man'čžurižiš kelišpäi]].
 
-Pagižijoiden lugu — 5 656 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine), rahvahan nelländez. Kirjkel' om [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal. Toine kel' om [[venäkel']].
+Pagižijoiden lugu — 5 656 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine), rahvahan nelländez. Kirjkel' om [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal, oli latinical-ki eziauguižešti. Toine kel' om [[venäkel']]. Leviganduz Venäman regionoidme: [[Ohotskan meri|Ohotskan meren]] randišt i randpol' (Habarovskan rand, Saha Tazovaldkund, Magadanan agj), Kamčatkan rand i Čukotkan avtonomine ümbrik.
 
-Keles om läz 20 paginad da dialektad. Kelen tedoiduz tegese [[Saha Tazovaldkund]]as päpaloin.
+Keles om läz 20 paginad da alapaginad, ühtenzoittas niid päivnouzmaižeks i päivlaksmaižeks gruppoikš, mugažo kadonu endevanh armanan pagin oli. Kelen tedoiduz tegese [[Saha Tazovaldkund]]as päpaloin. Kirjutajiden rivi sädi evenan kelel.
+
+Evenan keles substantivad oma rodun kategorijata. Kaik lugetas 13 kändod.
 
 {{Venäman valdkundaližed keled}}
 
