--- a/Evenan_kel'.mw
+++ b/Evenan_kel'.mw
@@ -1,10 +1,13 @@
 '''Evenan kel'''' (ende '''lamutan kel' ''', ičeze nimituz: ''эвэды төрэн'') om [[evenalaižed|evenalaižiden]] kel', üks' [[tungusiž-man'čžurižed keled|tungusiž-man'čžurižiš kelišpäi]].
 
-Pagižijoiden lugu — 5 656 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine), rahvahan nelländez. Kirjkel' om [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal, oli latinical-ki eziauguižešti. Toine kel' om [[venäkel']]. Leviganduz Venäman regionoidme: [[Ohotskan meri|Ohotskan meren]] randišt i randpol' (Habarovskan rand, Saha Tazovaldkund, Magadanan agj), Kamčatkan rand i Čukotkan avtonomine ümbrik.
+Pagižijoiden lugu — 5 656 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine), rahvahan nelländez. Kirjkel' om [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal vspäi 1937, oli latinical-ki eziauguižešti (1932). Kirjamišton nügüdläine form om olmas vspäi 1958. Toine kel' om [[venäkel']]. Leviganduz Venäman regionoidme: [[Ohotskan meri|Ohotskan meren]] randišt i randpol' (Habarovskan randan [[Ohotsk]]an rajon, Saha Tazovaldkund, Magadanan agj), Kamčatkan rand i Čukotkan avtonomine ümbrik.
 
-Keles om läz 20 paginad da alapaginad, ühtenzoittas niid päivnouzmaižeks i päivlaksmaižeks gruppoikš, mugažo kadonu endevanh armanan pagin oli. Kelen tedoiduz tegese [[Saha Tazovaldkund]]as päpaloin. Kirjutajiden rivi sädi evenan kelel.
+Keles om läz 20 paginad da alapaginad, ühtenzoittas niid päivnouzmaižeks i päivlaskmaižeks gruppoikš, mugažo kadonu endevanh armanan pagin oli. Päivnouzmaižen gruppan olan pagin om ottud kirjkelen aluseks. Kelen tedoiduz tegese [[Saha Tazovaldkund]]as päpaloin. Kirjutajiden rivi sädi evenan kelel. Om kirjutusid necil kelel «Kamčatkan aborigen»- (Kamčatkan rand) i «Ilken»-lugendlehtesiš (Saha Tazovaldkund).
 
 Evenan keles substantivad oma rodun kategorijata. Kaik lugetas 13 kändod.
+
+== Homaičendad ==
+<references />
 
 {{Venäman valdkundaližed keled}}
 
