--- a/Evenalaižed.mw
+++ b/Evenalaižed.mw
@@ -1,8 +1,10 @@
-[[Fail:Even women.jpg|thumb|right|250px|Evenalaižed naižed, aigaline 20. voz'sada.]]
+[[Fail:Even women.jpg|thumb|right|250px|Evenalaižed naižed, aigaližen 20. voz'sadan fotokuva]]
 [[Fail:Расселение эвенов 2010.png|thumb|right|250px|Rahvahan levigandusen kart Venämas vn 2010 rahvahanlugemižen mödhe]]
-'''Evenalaižed''' ([[evenan kel'|even]]. ''эвен'', {{lang-ru|эвены}}, ende ''ламуты'') oma tungusalaiž-man'čžuralaine Pohjoižen igähine vähäluguine rahvaz [[Venäma]]n Edahaižes Päivnouzmas. Oma [[evenkalaižed|evenkalaižiden]] lähižed heimolaižed.
+'''Evenalaižed''' ([[evenan kel'|even]]. ''эвэн'', ''эвэн бэилни'', {{lang-ru|эвены}}, ende ''ламуты'') oma tungusiž-man'čžurine [[Pohjoižen igähine vähäluguine rahvaz]] [[Venäma]]n Edahaižes Päivnouzmas. Oma [[evenkalaižed|evenkalaižiden]] lähižed heimolaižed.
 
-Rahvahan lugumär om läz 22 tuhad ristituid (2002, 2010). Kaikiš suremb ristitišt om nügüd'. Rahvahan kel' om [[evenan kel']]. 
+Rahvahan lugumär om läz 22 tuhad ristituid (2002, 2010). Kaikiš suremb ristitišt om nügüd'. Rahvahan kel' om [[evenan kel']] i [[venän kel']], kävutadas [[jakutan kel']]t mugažo kodikeleks. 
+
+Evenalaižed oma alištunuded [[ortodoksine hristanuskond|hristianizacijale]] läz täuzin, jo 19. voz'sadan augotišele.
 
 {{stub}}
 [[Kategorii:Evenalaižed| ]]
