--- a/Evenalaižed.mw
+++ b/Evenalaižed.mw
@@ -4,7 +4,10 @@
 
 Rahvahan lugumär om läz 22 tuhad ristituid (2002, 2010). Kaikiš suremb ristitišt om nügüd'. Rahvahan kel' om [[evenan kel']] i [[venän kel']], kävutadas [[jakutan kel']]t mugažo kodikeleks. 
 
-Evenalaižed oma alištunuded [[ortodoksine hristanuskond|hristianizacijale]] läz täuzin, jo 19. voz'sadan augotišele.
+Evenalaižed oma alištunuded [[ortodoksine hristanuskond|hristianizacijale]] läz täuzin, jo 19. voz'sadan augotišele. Ende Päiväižen kul't harakterizui rahvast, toihe sille pedroid andaks. Rahvahaližed sarnad, kargud i pühäčud oma kaičenus.
+
+== Homaičendad ==
+<references />
 
 {{stub}}
 [[Kategorii:Evenalaižed| ]]
