*Empty MediaWiki Message*

--- a/Karjalaine_kongress.mw
+++ b/Karjalaine_kongress.mw
@@ -1,9 +1,12 @@
 '''«Karjalaine kongress»''' ({{lang-krl|'''Karjalaine kongressu'''}}, {{lang-ru|Карельский конгресс}}, {{lang-fi|Karjalainen kongressi}}) om [[Karjal]]an rahvahaline kundaline organizacii. Radab [[karjalaižed|karjalaižiden]], [[vepsläižed|vepsläižiden]] da [[suomalaižed|suomalaižiden]] etnokul'turižiden oiktusiden realizacijan täht, sidä kesken pätegend om vajehtusiden tond [[Karjalan Tazovaldkundan Konstitucii|Karjalan Tazovaldkundan Konstitucijha]] paremboičemha neniden igähižiden rahvahiden olendad.
 
-Lider om [[Grigor'jev Anatolii|Anatolii Semönovič Grigor'jev]] (aluselpäi vl 1993). «Karjalaine kongress»-organizacii om registriruidud ezmäižen kerdan [[Petroskoi]]š vn 1993 26. päiväl kül'mkud. Organizaciijan päalusiden uz' redakcii i politine deklaracii oma vahvištadud sen Nevondkundan ištundal [[Anus-lidn]]as vn 1998 26. päiväl tal'vkud.
+Lider om [[Grigor'jev Anatolii|Anatolii Semönovič Grigor'jev]] (aluselpäi vl 1993). «Karjalaine kongress»-organizacii om registriruidud ezmäižen kerdan [[Petroskoi]]š vn 1993 26. päiväl kül'mkud. Organizacijan päalusiden uz' redakcii i politine deklaracii oma vahvištadud sen Nevondkundan ištundal [[Anus-lidn]]as vn 1998 26. päiväl tal'vkud.
 
 == Kacu mugažo ==
 * [[Nuori Karjala]]
+
+== Homaičendad ==
+<references />
 
 {{stub}}
 [[Kategorii:Karjalan Tazovaldkund]]
