--- a/Oiktusekaz_Venäma_—_Todhe_näht.mw
+++ b/Oiktusekaz_Venäma_—_Todhe_näht.mw
@@ -1,7 +1,7 @@
 [[Fail:Election russia 2007 007.jpg|thumb|right|250px|Partijan banner [[Piter]]iš, 2007]]
-'''Oiktusekaz Venäma''' ({{lang-ru|Справедливая Россия}}) om [[Venäma]]n [[politine partii]]. Otab hurad keskust politikan spektras.
+'''Oiktusekaz Venäma — Todes''' ({{lang-ru|Справедливая Россия — За правду}}) om [[Venäma]]n [[politine partii]]. Otab hurad keskust politikan spektras. Päfater sijadase [[Moskv]]as.
 
-Partii om sätud suimal vn 2006 28. päiväl redukud. Lider om [[Sergei Mironov]].
+Partii om sätud [[Rodina (partii, Venäma)|Rodina]]-partijan 7. suimal vn 2006 28. päiväl redukud. Ezimez' da lider om [[Sergei Mironov]] partijan alusenpanendaspäi. Vn 2021 22. päiväl uhokud om varaezimehiden radnikusid, hö oma Zahar Prilepin i Gennadii Semigin.
 
 == Irdkosketused ==
 * [http://spravedlivo.ru/ Partijan oficialine sait (''spravedlivo.ru'').] {{ref-ru}}
