--- a/Mirnii_(Saha_Tazovaldkund).mw
+++ b/Mirnii_(Saha_Tazovaldkund).mw
@@ -15,7 +15,7 @@
  | Aigvö = [[UTC]]+9 (MSK+6)
 }}
 {{Znamoičendad|Mirnii}}
-'''Mirnii''' ({{lang-ru|Мирный}}, {{lang-sah|Мииринэй}}) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an päivlaskmas. Se om tazovaldkundan koumanz' lidn eläjiden lugun mödhe, [[Mirnijan rajon]]an administrativine keskuz.
+'''Mirnii''' ({{lang-ru|Мирный}}, {{lang-sah|Мииринэй / Мирнэй}}) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an päivlaskmas. Se om tazovaldkundan koumanz' lidn eläjiden lugun mödhe, [[Mirnijan rajon]]an administrativine keskuz.
 
 == Istorii ==
 Vl 1955 avaitihe «Mir»-kimberlitturut, sen samine vedihe vll 1957−2001 kar'jermahtusel. Panihe eländpunktan alust vl 1955 samha [[diamant]]oid, nimitihe löudmižsijan mödhe. Vl 1959 Mirnii sai lidnan statusad.
@@ -31,6 +31,18 @@ Mirnii om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 7 177,97 k
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 37 188 ristitud, rajonan pol'. Kaikiš suremb ristitišt oli 39..40 tuhad eläjid vll 1992 i 2002−2005 (40 tuh. rist. vl 2003). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Stroican jumalanpert', ph. Ezikuctud Ondrii-apostolan mez'jumalankodi i kaks' časounäd oma olmas lidnas.
 
 Mirnijan regionaline tehnine kolledž da üläopendusen viž filialad (Jakutsk, Tomsk, Novosibirsk) oma professionaližikš aluzkundoikš.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Mirny - 190226 DSC 4789.jpg|Mirnijan rajonan administracijan sauvuz (2019)
+Church of the Holy Trinity. Mirny..jpg|Ph. Stroican jumalanpert', vn 2014 nägu
+Mirny, Yakutia 01.jpg|«ALROSA»-kompanijan päfater vl 2014
+Mirny - 190226 DSC 4791.jpg|«Zarnica»-adivpert' (2019)
+Mirny - 190227 DSC 4829.jpg|Mirnii-lendimportan sauvused vl 2019
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://gorodmirny.ru/ Lidnan tobmuden aluzkundoiden oficialine portal (''gorodmirny.ru'').] {{ref-ru}}
