--- a/Nerüngri.mw
+++ b/Nerüngri.mw
@@ -14,6 +14,7 @@
  | Avtokod = 14
  | Aigvö = [[UTC]]+9 (MSK+6)
 }}
+[[Fail:Поездка в Нерюнгринский район, 2017 (087).jpg|thumb|left|250px|Ugol'nai-raudtestancii i industrialine park vl 2017]]
 '''Nerüngri''' ({{lang-ru|Нерюнгри}}, {{lang-sah|Нүөрүҥгүрү}}, {{lang-evn|Ньируунгра}} «[[harjuz]]jogi») om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an suves. Se om kahtenz' surtte lidn tazovaldkundas, [[Nerüngrin rajon]]an administrativine keskuz da pala.
 
 == Istorii ==
