--- a/Nerüngri.mw
+++ b/Nerüngri.mw
@@ -39,8 +39,8 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 61 747 rist
 Поездка в Нерюнгринский район, 2017 (308).jpg|Tehnine institut (2017, Pohjoižpäivnouzmaižen federaližen universitetan filial)
 Поездка в Нерюнгринский район, 2017 (384).jpg|«Gornäk»-stadion (2017, ''Kaivai'')
 Поездка в Нерюнгринский район, 2017 (035).jpg|Nerüngri-Passažirskai-päraudtestancijan sauvuz vl 2017
-Night panorama of the Neryungri town.png|Öline ühthine nägu (2013)
 </gallery>
+[[Fail:Night panorama of the Neryungri town.png|thumb|center|1000px|<center>Lidnan öline ühthine nägu (2013)</center>]]
 
 == Homaičendad ==
 <references />
