toine kuva kadonuded sijha

--- a/Mari.mw
+++ b/Mari.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 126,000
  | Voz' = 2010
  | Pind = 
- | Fail = TurkmenistanMaryMosque.jpg
+ | Fail = Mary with Hajji Gurbanguly Mosque (2) (46050578652).jpg
  | Pämez' = 
  | Telefonkod = +993-522
  | Aigvö = [[UTC]]+5
