/* Galerei */  toine kuva kadonuden sijha

--- a/Sarajevo.mw
+++ b/Sarajevo.mw
@@ -35,7 +35,7 @@ Mount Igman.JPG|Novi Grad Igman-mägenke tagamal
 BBI Shopping and Business Center.jpg|BBI-torguindkeskuz da ofispert'
 Sarajevo Tram-506 Line-3 2013-10-14.jpg|Lidnan merii i Rahvahaline kirjišt
 Sarajevo for Visa (34) (5589553321).jpg|Päraudtestancijan i avtovagzalan torg
-Sarajevo City Center Summer 2015 (2).jpg|«Sarajevo City Center» (om saudud vl 2014)
+Sarajevo - Sarajevo City Center (SCC) (49104304738).jpg|«Sarajevo City Center», 2019 (om saudud vl 2014)
 </gallery>
 
 == Sebruzlidnad ==
