--- a/Džeronimo.mw
+++ b/Džeronimo.mw
@@ -1,7 +1,18 @@
-[[Fail:Geronimo (Goyathlay), a Chiricahua Apache, full-length, kneeling with rifle, 1887 - NARA - 530880.jpg|thumb|right|250px|Džeronimo]]
-'''Džeronimo''' ([[Anglijan kel'|angl.]] ''Geronimo'', čirikauan nimi '''Gujahle''' (Guyaałé), midä znamoičeb ''«Se, ken haikostase»''; [[16. kezaku]] [[1829]] — [[17. uhoku]] [[1909]]) oli [[čirikaua (heim)|čirikaua-apačijoiden]] voinpämez', kudamb 25 voden joksten oli voibištelendan ezinenas, konz [[AÜV]] napriba anastada hänen heimon mad. Vl [[1886]] hänele pidi anttas amerikalaižele armijale.
+{{Personalii
+| изображение = Geronimo (Goyathlay), a Chiricahua Apache, full-length, kneeling with rifle, 1887 - NARA - 530880.jpg
+| описание изображения = Džeronimo vl 1887
+}}
+'''Džeronimo''' ({{lang-en|Geronimo}}, [[čirikaua]]n nimi '''Gujahle''' (Guyaałé), midä znamoičeb ''«Se, ken haikostase»''; sünd. [[16. kezaku]] [[1829]] — kol. [[17. uhoku]] [[1909]]) oli [[apačid]]en čirikaua-heimon sodapämez', kudamb oli vastustelendan ezinenas 25 voden joksten, konz Meksikan, i sid' AÜV:oiden sodaväged napriba anastada hänen heimon mad. Vl [[1886]] hänele pidi anttas amerikaižele armijale.
 
+Mez' kändihe heimon sodavejaks meksikalaižiden rikojan londan jäl'ghe, hän oli äjiden reidoiden pämeheks meksikalaižid i AÜV:oiden armijad vaste. Džeronimon jouk oli vähäluguižemb toras kaiken, no sai tetabut ičeze rohktusen tagut, lähtli aznoičendata vihanikoiden polespäi.
+
+Otandan plenha jäl'ghe Džeronimo kirjuti avtobiografijad. Hänen joukun vägitegod oma fil'mdud severz'-se kerdoid.
+
+== Homaičendad ==
+<references />
+
+{{Commons|Geronimo}}
 
 {{stub}}
-
 [[Kategorii:Indejalaižed]]
+[[Kategorii:Sodapämehed]]
